# agentbazaar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json  vercel.json
.github/workflows/: build-contracts.yml  ci.yml  devnet-deploy.yml  sdk-tests.yml
apps/backend/: .env.example  Dockerfile  package.json  railway.json  zbpack.json
apps/frontend/: .env.example  next.config.js  package.json  tailwind.config.js  vercel.json
apps/marketplace/: .env.local.example  next.config.ts  package.json
contracts/: README.md
contracts/dao/: Cargo.toml
contracts/escrow/: Cargo.toml  README.md  abi.json
contracts/output/: registry.abi.json
contracts/registry/: Cargo.toml  README.md  abi.json
contracts/registry/meta/: Cargo.toml  main.rs
contracts/registry/src/: events.rs  lib.rs  storage.rs  views.rs
contracts/registry/tests/: registry_test.rs
contracts/reputation/: Cargo.toml  README.md  abi.json
contracts/reputation/meta/: Cargo.toml  main.rs
contracts/reputation/src/: events.rs  lib.rs  reputation_antisybil.rs  storage.rs  views.rs
contracts/reputation/tests/: reputation_test.rs
contracts/token/: Cargo.toml
database/: schema.sql
devnet/: README.md  config.json  deploy-mainnet.sh  deploy.sh  deploy_windows.py  interact.sh  mainnet-config.json  multiversx.json  mxpy.json  update-env.sh  verify.sh  verify_windows.py  wallet-setup.sh  wallet_setup_windows.py
docs/: MCP_INTEGRATION.md  architecture.md  sdk-usage.md  service-descriptor-spec.md  tokenomics.md
scripts/: check-devnet-health.sh  deploy.sh  setup-devnet.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/agent/: package.json
sdk/demos/: e2e-devnet.ts
sdk/langchain/: agentbazaar_tool.py  anthropic_tool.py
sdk/python/: README.md  setup.py
sdk/src/: acp.ts  agentBazaar.ts  ap2.ts  chainClient.ts  consumerRunner.ts  createTask.ts  devnet.ts  discoverServices.ts  (+14 more)
(+207 files in other folders)
