[workspace]
members = [
    "contracts/registry",
    "contracts/escrow",
    "contracts/reputation",
    "contracts/token",
    "contracts/dao",
]
resolver = "2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace.dependencies]
multiversx-sc = "0.65.1"
multiversx-sc-scenario = "0.65.1"
