[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies.multiversx-sc]
version = "0.54.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.0"

[dependencies.multiversx-sc-meta-lib]
version = "0.54.0"

[[bin]]
name = "registry-meta"
path = "meta/main.rs"
