[package]
name = "reputation"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []

[dependencies.multiversx-sc]
version = "0.65.1"

[dependencies.multiversx-sc-wasm-adapter]
version = "0.65.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.1"
